--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,27 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+<link href="{{ "/assets/images/favicon.png" | prepend: site.baseurl }}" rel="icon" type="image/png">
+  
+<link rel="stylesheet" href="{{ "/assets/vendor/swiper/css/swiper.min.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/assets/vendor/hamburgers/hamburgers.min.css" type="text/css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/assets/vendor/animate/animate.min.css" type="text/css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/assets/vendor/fancybox/css/jquery.fancybox.min.css" | prepend: site.baseurl }}">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}" type="text/css">
+<link rel="stylesheet" href="{{ "/assets/fonts/ionicons/css/ionicons.min.css" | prepend: site.baseurl }} "type="text/css">
+<link rel="stylesheet" href="{{ "/assets/fonts/line-icons/line-icons.css" | prepend: site.baseurl }} "type="text/css">
+<link rel="stylesheet" href="{{ "/assets/fonts/line-icons-pro/line-icons-pro.css" | prepend: site.baseurl }}" type="text/css">
+
+<link rel="stylesheet" href="{{ "/assets/fonts/linea/arrows/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
+<link rel="stylesheet" href="{{ "/assets/fonts/linea/basic/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
+<link rel="stylesheet" href="{{ "/assets/fonts/linea/ecommerce/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
+<link rel="stylesheet" href="{{ "/assets/fonts/linea/software/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=latin" rel="stylesheet">  
+<link id="stylesheet" type="text/css" href="{{ "/assets/css/boomerang-startup-agency.min.css" | prepend: site.baseurl }}" rel="stylesheet" media="screen">
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+
 </head>
