--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,3 +53,49 @@
   </div>
 
 </footer>
+
+<!-- Core -->
+<script src="{{ "/assets/vendor/jquery/jquery.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/popper/popper.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/bootstrap/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/slidebar/slidebar.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/classie.js" | prepend: site.baseurl }}"></script>
+
+<!-- Bootstrap Extensions -->
+<script src="{{ "/assets/vendor/bootstrap-notify/bootstrap-growl.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/scrollpos-styler/scrollpos-styler.js" | prepend: site.baseurl }}"></script>
+
+<!-- Plugins: Sorted A-Z -->
+<script src="{{ "/assets/vendor/adaptive-backgrounds/adaptive-backgrounds.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/countdown/js/jquery.countdown.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/dropzone/dropzone.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/easy-pie-chart/jquery.easypiechart.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/fancybox/js/jquery.fancybox.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/flatpickr/flatpickr.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/flip/flip.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/footer-reveal/footer-reveal.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/gradientify/jquery.gradientify.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/headroom/headroom.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/headroom/jquery.headroom.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/input-mask/input-mask.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/instafeed/instafeed.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/milestone-counter/jquery.countTo.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/nouislider/js/nouislider.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/paraxify/paraxify.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/select2/js/select2.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/sticky-kit/sticky-kit.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/swiper/js/swiper.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/textarea-autosize/autosize.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/typeahead/typeahead.bundle.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/typed/typed.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/vide/vide.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/viewport-checker/viewportchecker.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/wow/wow.min.js" | prepend: site.baseurl }}"></script>
+
+<!-- Isotope -->
+<script src="{{ "/assets/vendor/isotope/isotope.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}"></script>
+
+
+<!-- App JS -->
+<script src="{{ "/assets/js/boomerang.min.js" | prepend: site.baseurl }}"></script>
