--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,96 @@
-<footer class="site-footer">
+ <footer id="footer" class="footer">
+    <div class="footer-top">
+        <div class="container container-lg">
+            <div class="row cols-xs-space cols-sm-space cols-md-space">
+                <div class="col-lg-3">
+                    <div class="col">
+                        <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
+                            Quick links
+                        </h4>
+
+                        <ul class="footer-links">
+                             <li>
+                                 <a href="homepage-video.html#">Home</a>
+                             </li>
+                             <li>
+                                 <a href="homepage-video.html#">About us</a>
+                             </li>
+                             <li>
+                                 <a href="homepage-video.html#">Services</a>
+                             </li>
+                             <li>
+                                 <a href="homepage-video.html#">Blog</a>
+                             </li>
+                             <li>
+                                 <a href="homepage-video.html#">Contact</a>
+                             </li>
+                         </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="col">
+                       <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
+                           Support
+                       </h4>
+
+                       <ul class="footer-links">
+                            <li><a href="homepage-video.html#">Help center</a></li>
+                            <li><a href="homepage-video.html#">Discussions</a></li>
+                            <li><a href="homepage-video.html#">Contact</a></li>
+                            <li><a href="homepage-video.html#">Blog</a></li>
+                            <li><a href="homepage-video.html#">FAQ</a></li>
+                        </ul>
+                     </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="col">
+                       <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
+                           Archives
+                       </h4>
+
+                       <ul class="footer-links">
+                            <li><a href="homepage-video.html#" title="Help center">May 2018</a></li>
+                            <li><a href="homepage-video.html#" title="Discussions">June 2018</a></li>
+                            <li><a href="homepage-video.html#" title="Contact support">July 2018</a></li>
+                            <li><a href="homepage-video.html#" title="Blog">August 2018</a></li>
+                            <li><a href="homepage-video.html#" title="Jobs">September 2018</a></li>
+                            <li><a href="homepage-video.html#" title="Jobs">October 2018</a></li>
+                            <li><a href="homepage-video.html#" title="Jobs">November 2018</a></li>
+                        </ul>
+                     </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="col">
+                        <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
+                            About {{ site.title }}
+                        </h4>
+                        <p>
+                            150 Southeast Pidgeon Meadow
+                            <br>
+                            Claflin Terrace, 305458
+                        </p>
+                        <p class="lead mt-4 mb-4">
+                            E: <a href="homepage-video.html#">support@everpay.io</a>
+                            <br>
+                            T: 0755.222.333
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+                </div>
+            </div>
+        </div><!-- END: st-pusher -->
+    </div><!-- END: st-container -->
+</div><!-- END: body-wrap -->
+
+
+<footer class="site-footer hidden" style="display: none">
 
   <div class="wrapper">
 
