--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -146,6 +146,10 @@
 
 </footer>
 
+
+<!-- SCRIPTS -->
+<a href="top#" class="back-to-top btn-back-to-top"></a>
+
 <!-- Core -->
 <script src="{{ "/assets/vendor/jquery/jquery.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/vendor/popper/popper.min.js" | prepend: site.baseurl }}"></script>
