--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,55 @@
-<header class="site-header">
+ <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark ">
+        <div class="container container-lg navbar-container">
+                
+          <a class="navbar-brand" href="{{ site.baseurl }}/">
+                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpaylogo-261x67_jrwizm.png" class="d-none d-lg-inline-block" alt="Everpay">
+                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpay-dark-logo_lghtzd.png" class="d-lg-none" alt="EverPay">            </a>
+            
+            <div class="d-inline-block">
+                <!-- Navbar toggler  -->
+                <button class="navbar-toggler hamburger hamburger-js hamburger--spring" type="button" data-toggle="collapse" data-target="#navbar_main" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+            </div>
+
+            <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
+    <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+            <a href="homepage-video.html#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
+
+            <ul class="dropdown-menu">
+                <li class="dropdown">
+                    <a href="{{ site.baseurl }}/" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage</a>
+                    <a href="homepage-video.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage: Video</a>
+                </li>
+            </ul>
+        </li>
+        <li class="nav-item dropdown">
+            <a href="{{ site.baseurl }}/about" class="nav-link">About us</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a href="news.html" class="nav-link">News</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a href="{{ site.baseurl }}/contact" class="nav-link">Contact</a>
+        </li>
+        <li class="nav-item">
+            <a href="../../demos.html" class="nav-link">Demos</a>
+        </li>
+    </ul>
+</div>
+
+<div class="pl-4 d-none d-lg-inline-block">
+    <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
+        Purchase now
+        <span class="badge badge-pill bg-base-2">$23 USD</span>    </a>
+</div>
+        </div>
+    </nav>
+</div>
+<header class="site-header hidden" style="display:none;">
 
   <div class="wrapper">
 
