--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,24 @@
 
   {% include head.html %}
 
-  <body>
+<body>
+
+
+<!-- MAIN WRAPPER -->
+<div class="body-wrap">
+    <div id="st-container" class="st-container">
+
+        <div class="st-pusher">
+            <div class="st-content">
+                <div class="st-content-inner">
+                    <!-- Header -->
+                    <div class="header">
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+                      
         {{ content }}
-      </div>
-    </div>
+  
 
     {% include footer.html %}
 
