--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,19 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <link href="{{ "/assets/images/favicon.png" | prepend: site.baseurl }}" rel="icon" type="image/png">
-  
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{ "/assets/vendor/swiper/css/swiper.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/vendor/hamburgers/hamburgers.min.css" type="text/css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/vendor/animate/animate.min.css" type="text/css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/vendor/fancybox/css/jquery.fancybox.min.css" | prepend: site.baseurl }}">
 
-<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ "/assets/fonts/ionicons/css/ionicons.min.css" | prepend: site.baseurl }} "type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons/line-icons.css" | prepend: site.baseurl }} "type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons-pro/line-icons-pro.css" | prepend: site.baseurl }}" type="text/css">
