--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,11 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <link href="{{ "/assets/images/favicon.png" | prepend: site.baseurl }}" rel="icon" type="image/png">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="{{ "/assets/vendor/bootstrap/css/bootstrap.min.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/vendor/swiper/css/swiper.min.css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ "/assets/vendor/hamburgers/hamburgers.min.css" type="text/css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ "/assets/vendor/animate/animate.min.css" type="text/css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/assets/vendor/hamburgers/hamburgers.min.css" | prepend: site.baseurl }}" type="text/css">
+<link rel="stylesheet" href="{{ "/assets/vendor/animate/animate.min.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/vendor/fancybox/css/jquery.fancybox.min.css" | prepend: site.baseurl }}">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,7 +25,7 @@
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/software/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=latin" rel="stylesheet">  
-<link id="stylesheet" type="text/css" href="{{ "/assets/css/boomerang-startup-agency.min.css" | prepend: site.baseurl }}" rel="stylesheet" media="screen">
+<link id="stylesheet" href="{{ "/assets/css/boomerang-startup-agency.min.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
