--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
                 
           <a class="navbar-brand" href="{{ site.baseurl }}/">
                 <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpay-dark-logo_lghtzd.png" class="d-none d-lg-inline-block" alt="Everpay">
-                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpay-dark-logo_lghtzd.png" class="d-lg-none" alt="EverPay">            </a>
+                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpay-dark-logo_lghtzd.png" class="d-lg-none" alt="EverPay">           
+         </a>
             
             <div class="d-inline-block">
                 <!-- Navbar toggler  -->
