--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,16 +16,221 @@
 
             <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
     <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-            <a href="homepage-video.html#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
+     
+<li class="nav-item dropdown megamenu">
+            <a class="nav-link dropdown-toggle" href="index.html#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              More
+            </a>
 
-            <ul class="dropdown-menu">
-                <li class="dropdown">
-                    <a href="{{ site.baseurl }}/" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage</a>
-                    <a href="homepage-video.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage: Video</a>
-                </li>
-            </ul>
-        </li>
+            <div class="dropdown-menu">
+                <div class="mega-dropdown-menu row row-no-padding">
+                    <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--left col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
+                        <span class="mask mask-base-1--style-1 alpha-8"></span>
+                        <div class="mega-dropdown-col-inner d-flex align-items-center no-padding">
+                            <div class="col">
+                                <div class="row align-items-center">
+                                    <div class="col-12">
+                                        <div class="px-4">
+                                            <h2 class="heading heading-2 strong-600 c-white">
+                                                Documentation and Shortcodes
+                                            </h2>
+                                            <p class="strong-300 c-white mt-4">
+                                                Get started fast and easy with Boomerang using the documentation and shortcode examples. No matter
+                                                you are a developer or new to web design, you will
+                                                find our theme very easy to customize with
+                                                an intuitive HTML markup.
+                                            </p>
+                                            <div class="btn-container mt-5">
+                                                <a href="documentation/getting-started/introduction.html" target="_blank" class="btn btn-styled btn-white btn-outline btn-circle">Read the Docs</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 col-lg-2 ml-lg-auto">
+                        <ul class="megadropdown-links">
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/alerts.html">
+                                    Alerts
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/badges.html">
+                                    Badges
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/buttons.html">
+                                    Buttons
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/cards.html">
+                                    Cards
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/collapse.html">
+                                    Collapse
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/countdown.html">
+                                    Countdown
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/dropdown.html">
+                                    Dropdowns
+                                </a>
+                            </li>
+
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/forms.html">
+                                    Forms
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/instagram.html">
+                                    Instagram
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/lightbox.html">
+                                    Lightbox
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/maps.html">
+                                    Maps
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/masonry.html">
+                                    Masonry
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4 col-lg-2">
+                        <ul class="megadropdown-links">
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/pagination.html">
+                                    Pagination
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/progress.html">
+                                    Progress bars
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/recaptcha.html">
+                                    Recaptcha
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/content/titles.html">
+                                    Section titles
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/forms.html#ex_component_sliders">
+                                    Sliders
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/tabs.html">
+                                    Tabs
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/components/typed-animations.html">
+                                    Typed animations
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/headers.html">
+                                    Headers
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="https://preview.webpixels.io/boomerang-v3.6.1/html/default/sliders/boomerang-slider/index.html">
+                                    Boomerang slider
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="https://preview.webpixels.io/boomerang-v3.6.1/html/default/sliders/revolution-slider/index.html">
+                                    Revolution slider
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/footers.html">
+                                    Footers
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/hero.html">
+                                    Hero blocks
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4 col-lg-2">
+                        <ul class="megadropdown-links">
+
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/icon.html">
+                                    Icon blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/jobs.html">
+                                    Job blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/pricing.html">
+                                    Pricing blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/product.html">
+                                    Product blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/real-estate.html">
+                                    Real-Estate blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/team.html">
+                                    Team blocks
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/testimonials.html">
+                                    Testimonial blocks
+                                </a>
+                            </li>
+
+                            <li>
+                                <a class="dropdown-item" href="documentation/blocks/comments.html">
+                                    Comment blocks
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </li> 
+     
         <li class="nav-item dropdown">
             <a href="{{ site.baseurl }}/about" class="nav-link">About us</a>
         </li>
@@ -36,9 +241,21 @@
             <a href="{{ site.baseurl }}/contact" class="nav-link">Contact</a>
         </li>
         <li class="nav-item">
-            <a href="../../demos.html" class="nav-link">Demos</a>
+            <a href="#" class="nav-link">Demos</a>
         </li>
-    </ul>
+     
+     
+        <li class="nav-item dropdown">
+            <a href="top#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+
+            <ul class="dropdown-menu">
+                <li class="dropdown">
+                    <a href="{{ site.baseurl }}/" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Processing</a>
+                    <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Advisory</a>
+                </li>
+            </ul>
+        </li>     
+  </ul>
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
