--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,8 +24,10 @@
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/ecommerce/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/software/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=latin" rel="stylesheet">  
+<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet">  
 <link id="stylesheet" href="{{ "/assets/css/boomerang-startup-agency.min.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen">
+<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
+  
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
