--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
         <div class="container container-lg navbar-container">
                 
           <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpaylogo-261x67_jrwizm.png" width="140" class="d-none d-lg-inline-block" alt="Everpay">
+                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpaylogo-261x67_jrwizm.png" width="130" class="d-none d-lg-inline-block" alt="Everpay">
            </a>
             
             <div class="d-inline-block">
@@ -93,14 +93,14 @@
             <div class="dropdown-menu">
                 <div class="mega-dropdown-menu row row-no-padding">
                     <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--left col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(../../assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
-                        <span class="mask mask-base-1--style-1 alpha-8"></span>
+                        <span class="mask bg-base-1 alpha-8"></span>
                         <div class="mega-dropdown-col-inner d-flex align-items-center no-padding">
                             <div class="col">
                                 <div class="row align-items-center">
                                     <div class="col-12">
                                         <div class="px-4">
                                             <h2 class="heading heading-2 strong-600 c-white">
-                                                Documentation and Shortcodes
+                                                Documentation 
                                             </h2>
                                             <p class="strong-300 c-white mt-4">
                                                 Get started fast and easy with Boomerang using the documentation and shortcode examples. No matter
