--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,18 +12,20 @@
 <link rel="stylesheet" href="{{ "/assets/vendor/swiper/css/swiper.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/vendor/hamburgers/hamburgers.min.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/vendor/animate/animate.min.css" | prepend: site.baseurl }}" type="text/css">
-  
 <link rel="stylesheet" href="{{ "/assets/vendor/fancybox/css/jquery.fancybox.min.css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ "/assets/fonts/ionicons/css/ionicons.min.css" | prepend: site.baseurl }}" type="text/css">
+  
+<link rel="stylesheet" href="{{ "https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.4.8/collection/icon/icon.css" type="text/css">
+  
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons/line-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons-pro/line-icons-pro.css" | prepend: site.baseurl }}" type="text/css">
-
+<link rel="stylesheet" href="{{ "/assets/fonts/budicon/budicon.css" | prepend: site.baseurl }}" type="text/css">
+                                                                                   
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/arrows/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/basic/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/ecommerce/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/software/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 
-<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}" type="text/css">
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWpt77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"><link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet">  
 <link id="stylesheet" href="{{ "/assets/css/boomerang-startup-agency.min.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen">
 <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
