--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -156,6 +156,7 @@
 <script src="{{ "/assets/vendor/bootstrap/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/slidebar/slidebar.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/classie.js" | prepend: site.baseurl }}"></script>
+<script src=”https://unpkg.com/feather-icons/dist/feather.min.js”></script>
 
 <!-- Bootstrap Extensions -->
 <script src="{{ "/assets/vendor/bootstrap-notify/bootstrap-growl.min.js" | prepend: site.baseurl }}"></script>
