--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -192,7 +192,10 @@
 <!-- Isotope -->
 <script src="{{ "/assets/vendor/isotope/isotope.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}"></script>
-
-
+<script>
+ 
+  feather.replace()
+ 
+</script>
 <!-- App JS -->
 <script src="{{ "/assets/js/boomerang.min.js" | prepend: site.baseurl }}"></script>
