--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,13 +8,12 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <link href="{{ "/assets/images/favicon.png" | prepend: site.baseurl }}" rel="icon" type="image/png">
 
-
 <link rel="stylesheet" href="{{ "/assets/vendor/bootstrap/css/bootstrap.min.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/vendor/swiper/css/swiper.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/assets/vendor/hamburgers/hamburgers.min.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/vendor/animate/animate.min.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/vendor/fancybox/css/jquery.fancybox.min.css" | prepend: site.baseurl }}">
-  
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.4.8/collection/icon/icon.css" type="text/css">
   
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons/line-icons.css" | prepend: site.baseurl }}" type="text/css">
@@ -26,9 +25,10 @@
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/ecommerce/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/software/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWpt77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"><link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet">  
+ <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet">  
 <link id="stylesheet" href="{{ "assets/css/boomerang-startup-agency.min.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen">
+
+<script src="https://unpkg.com/feather-icons"></script>
 <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">  
   
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
