--- a/_includes/header.html
+++ b/_includes/header.html
@@ -302,7 +302,7 @@
 
     <ul class="navbar-nav ml-lg-auto">
         <li class="nav-item">
-            <a href="https://id.everpayinc.com/login/" class="nav-link">
+            <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-sm btn-base-1">
             Login <i data-feather="circle"></i>
             </a>
         </li>
