--- a/_includes/header.html
+++ b/_includes/header.html
@@ -302,15 +302,15 @@
 
     <ul class="navbar-nav ml-lg-auto">
         <li class="nav-item">
-            <a href="../../documentation/getting-started/introduction.html" class="nav-link">
-               Docs
+            <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-sm btn-base-1">
+            Login <i data-feather="circle"></i>
             </a>
         </li>
     </ul>
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
-    <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
+    <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
         Get Started
       </a>
 </div>
