--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
         <div class="container container-lg navbar-container">
                 
           <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpaylogo-261x67_jrwizm.png" width="130" class="d-none d-lg-inline-block" alt="Everpay">
+                <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853334/Everpaylogo-261x67_jrwizm.png" width="110" class="d-none d-lg-inline-block" alt="Everpay">
            </a>
             
             <div class="d-inline-block">
@@ -300,12 +300,10 @@
         </li>
     </ul>
 
-    <ul class="navbar-nav ml-lg-auto">
-        <li class="nav-item">
-            <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-sm btn-base-1">
+    <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
+            <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-sm btn-link">
             Login <i data-feather="circle"></i>
             </a>
-        </li>
     </ul>
 </div>
 
