--- a/_includes/header.html
+++ b/_includes/header.html
@@ -301,13 +301,19 @@
     </ul>
 
     <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
-            <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-sm btn-link">
-            Login <i data-feather="circle"></i>
+     <li class="nav-link">
+      <a href="https://id.everpayinc.com/login/" class="">
+            Login
             </a>
+     </li>
     </ul>
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
+     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
+       Login <i data-feather="circle"></i>
+      </a>
+ 
     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
         Get Started
       </a>
