--- a/_includes/header.html
+++ b/_includes/header.html
@@ -310,7 +310,7 @@
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
-     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
+     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm bg-base-1 text-uppercase btn-circle">
        Login <i data-feather="circle"></i>
       </a>
  
