--- a/_includes/header.html
+++ b/_includes/header.html
@@ -301,9 +301,9 @@
     </ul>
 
     <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
-     <li class="nav-link">
-      <a href="https://id.everpayinc.com/login/" class="">
-            Login
+     <li class="nav-item">
+      <a href="#" class="nav-link">
+        <i data-feather="circle"></i>
             </a>
      </li>
     </ul>
@@ -311,7 +311,7 @@
 
 <div class="pl-4 d-none d-lg-inline-block">
      <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm bg-base-1 text-uppercase btn-circle">
-       Login <i data-feather="circle"></i>
+       Login <i class="icon-budicon-288 fa-lg m-right-lg-5"></i>
       </a>
  
     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
