--- a/_includes/header.html
+++ b/_includes/header.html
@@ -310,8 +310,9 @@
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
-     <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-sm btn-outline-success text-uppercase btn-circle">
-       Login <i class="icon-budicon-288 fa-2x m-right-lg-5"></i>
+     <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle">
+       Login 
+      <i class="icon-budicon-288 fa-lg"></i>
       </a>
  
     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
