--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,13 +30,32 @@
     <!-- Navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="../../index.html">
-                Overview
+            <a class="nav-link" href="#">
+            What we do
             </a>
         </li>
-        <li class="nav-item dropdown">
+        
+     
+        <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="{{ site.baseurl }}/pricing">
+              Shop
+            </a>
+        </li>        
+     
+     <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="https://shop.everpayinc.com">
+              Shop
+            </a>
+        </li>
+          <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="{{ site.baseurl }}/#">
+               Company
+            </a>
+        </li>       
+     
+     <li class="nav-item dropdown">
             <a href="top#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Pages
+           Resources
             </a>
 
             <div class="dropdown-menu dropdown-menu-xl py-0 px-0 overflow--hidden" aria-labelledby="navbar_1_dropdown_1">
@@ -79,15 +98,10 @@
                     </a> 
                 </div>
             </div>
-        </li>
-        <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="../../demos.html">
-                Demos
-            </a>
-        </li>
-        <li class="nav-item dropdown megamenu">
+        </li>     
+     <li class="nav-item dropdown megamenu">
             <a class="nav-link dropdown-toggle" href="homepage-recruitment-1.html#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Components
+             What we do
             </a>
 
             <div class="dropdown-menu">
@@ -302,8 +316,8 @@
 
     <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
      <li class="nav-item">
-      <a href="#" class="nav-link">
-        <i data-feather="circle"></i>
+      <a href="#" class="nav-link btn-icon--2">
+        <i data-feather="icon fe-key"></i>
             </a>
      </li>
     </ul>
@@ -311,13 +325,12 @@
 
 <div class="pl-4 d-none d-lg-inline-block">
      <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle">
-       Login 
-      <i class="icon-budicon-288 fa-lg"></i>
+       Login <i data-feather="icon fe-login"></i>
       </a>
  
     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
-        Get Started
-      </a>
+        Get Started <i data-feather="icon fe-arrow-right"></i>     
+ </a>
 </div>
         </div>
     </nav>
