--- a/_includes/header.html
+++ b/_includes/header.html
@@ -536,11 +536,11 @@
 
 <div class="pl-4 d-none d-lg-inline-block">
      <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle">
-       Login <i data-feather="icon fe-login"></i>
+       Login <i data-feather="login"></i>
       </a>
  
     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
-        Get Started <i data-feather="icon fe-arrow-right"></i>     
+        Get Started <i data-feather="arrow-right"></i>     
  </a>
 </div>
         </div>
