--- a/_includes/header.html
+++ b/_includes/header.html
@@ -528,7 +528,7 @@
     <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
      <li class="nav-item">
       <a href="#" class="nav-link btn-icon--2">
-        <i data-feather="icon fe-key"></i>
+        <i data-feather="key"></i>
             </a>
      </li>
     </ul>
