--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,7 +65,10 @@
 
                     <div class="col-md-4 col-lg-2 ml-lg-auto">
                         <ul class="megadropdown-links">
-                            <li>
+                          <h4 class="heading heading-4 strong-600 c-black">
+                           Maximize Revenue
+                                            </h4>                            
+                         <li>
                                 <a class="dropdown-item" href="../../documentation/components/alerts.html">
                                     Alerts
                                 </a>
