--- a/_includes/header.html
+++ b/_includes/header.html
@@ -249,7 +249,7 @@
      
         <li class="nav-item dropdown megamenu">
             <a class="nav-link" href="{{ site.baseurl }}/pricing">
-              Shop
+              Pricing
             </a>
         </li>        
      
