--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,13 +31,13 @@
     <ul class="navbar-nav">
 
 <li class="nav-item dropdown megamenu">
-            <a class="nav-link dropdown-toggle" href="homepage-recruitment-1.html#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
              What we do
             </a>
 
             <div class="dropdown-menu">
                 <div class="mega-dropdown-menu row row-no-padding">
-                    <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--left col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(../../assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
+                    <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--right col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
                         <span class="mask bg-base-1 alpha-8"></span>
                         <div class="mega-dropdown-col-inner d-flex align-items-center no-padding">
                             <div class="col">
@@ -76,7 +76,8 @@
                             <li>
                                 <a class="dropdown-item" href="../../documentation/components/badges.html">
                                     Careers
-                                   <span class="badge badge-pill bg-base-2">Hiring</span>                                   </a>
+                                   <span class="badge badge-pill bg-base-2">We're Hiring</span>                                  
+                             </a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="../../documentation/components/buttons.html">
