--- a/_includes/header.html
+++ b/_includes/header.html
@@ -65,9 +65,9 @@
 
                     <div class="col-md-4 col-lg-2 ml-lg-auto">
                         <ul class="megadropdown-links">
-                          <h4 class="heading heading-4 strong-600 c-black">
+                          <h5 class="heading heading-5 strong-600 c-black">
                            Maximize Revenue
-                                            </h4>                            
+                                            </h5>                            
                          <li>
                                 <a class="dropdown-item" href="../../documentation/components/alerts.html">
                                     Alerts
@@ -135,7 +135,10 @@
 
                     <div class="col-md-4 col-lg-2">
                         <ul class="megadropdown-links">
-                            <li>
+                          <h5 class="heading heading-5 strong-600 c-black">
+                           Maximize Revenue
+                                            </h5>                            
+                         <li>
                                 <a class="dropdown-item" href="../../documentation/components/pagination.html">
                                     Pagination
                                 </a>
@@ -200,8 +203,10 @@
 
                     <div class="col-md-4 col-lg-2">
                         <ul class="megadropdown-links">
-
-                            <li>
+                       <h5 class="heading heading-5 strong-600 c-black">
+                           Maximize Revenue
+                         </h5>                              
+                         <li>
                                 <a class="dropdown-item" href="../../documentation/blocks/icon.html">
                                     Icon blocks
                                 </a>
