--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,33 +36,14 @@
             </a>
 
             <div class="dropdown-menu">
-                <div class="mega-dropdown-menu row row-no-padding">
+                <div class="mega-dropdown-menu col-lg-12 row justify-content-around">
                     <div class="mega-dropdown-col mega-dropdown-col-cover mega-dropdown-col-cover--right col-lg-5 d-none d-lg-block d-xl-block" style="background-image: url(assets/images/prv/other/img-14-1000x900.jpg); background-position: center center;">
-                        <span class="mask bg-base-1 alpha-8"></span>
                         <div class="mega-dropdown-col-inner d-flex align-items-center no-padding">
                             <div class="col">
                                 <div class="row align-items-center">
                                     <div class="col-12">
-                                        <div class="px-4">
-                                            <h2 class="heading heading-2 strong-600 c-white">
-                                                Documentation 
-                                            </h2>
-                                            <p class="strong-300 c-white mt-4">
-                                                Get started fast and easy with Boomerang using the documentation and shortcode examples. No matter
-                                                you are a developer or new to web design, you will
-                                                find our theme very easy to customize with
-                                                an intuitive HTML markup.
-                                            </p>
-                                            <div class="btn-container mt-5">
-                                                <a href="../../documentation/getting-started/introduction.html" target="_blank" class="btn btn-styled btn-white btn-outline btn-circle">Read the Docs</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                                        <div class="px-1">
+                                            
                     <div class="col-md-4 col-lg-2 ml-lg-auto">
                         <ul class="megadropdown-links">
                           <h5 class="heading heading-5 strong-600 c-black">
@@ -136,7 +117,7 @@
                     <div class="col-md-4 col-lg-2">
                         <ul class="megadropdown-links">
                           <h5 class="heading heading-5 strong-600 c-black">
-                           Maximize Revenue
+                           Expand Your Reach
                                             </h5>                            
                          <li>
                                 <a class="dropdown-item" href="../../documentation/components/pagination.html">
@@ -204,7 +185,7 @@
                     <div class="col-md-4 col-lg-2">
                         <ul class="megadropdown-links">
                        <h5 class="heading heading-5 strong-600 c-black">
-                           Maximize Revenue
+                           Boost Productivity
                          </h5>                              
                          <li>
                                 <a class="dropdown-item" href="../../documentation/blocks/icon.html">
@@ -248,7 +229,15 @@
                                 </a>
                             </li>
                         </ul>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                                         
+                                         </div>
                 </div>
             </div>
         </li>
