--- a/_includes/header.html
+++ b/_includes/header.html
@@ -343,7 +343,7 @@
                         <ul class="megadropdown-links">
                          <div class="px-4">
                          <h4 class="heading heading-2 strong-600 c-grey">
-                                           FGeatures
+                                           Features
                                             </h2>                           
                           <li>
                                 <a class="dropdown-item" href="../../documentation/components/alerts.html">
@@ -737,8 +737,8 @@
 
     <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
      <li class="nav-item">
-      <a href="#" class="nav-link btn-icon--2">
-        <i data-feather="key"></i>
+      <a href="#" class="nav-link">
+        <i data-feather="phone-call"></i>
             </a>
      </li>
     </ul>
@@ -746,11 +746,11 @@
 
 <div class="pl-4 d-none d-lg-inline-block">
      <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle">
-       Login <i data-feather="login"></i>
+       Login <i data-feather="log-in"></i>
       </a>
  
     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
-        Get Started <i data-feather="arrow-right"></i>     
+        Get Started <i data-feather="arrow-right-circle"></i>     
  </a>
 </div>
         </div>
