--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,10 +36,10 @@
             </a>
 
             <div class="dropdown-menu">
-                <div class="mega-dropdown-menu col-lg-12 row justify-content-around align-items-center">
+                <div class="mega-dropdown-menu col-lg-12 justify-content-around row row-no-padding">
                  <div class="px-1">
                                             
-                    <div class="col-md-4 col-lg-2 ml-lg-auto">
+                    <div class="col-md-4 col-lg-4 ml-lg-auto">
                         <ul class="megadropdown-links">
                           <h5 class="heading heading-5 strong-600 c-black">
                            Maximize Revenue
@@ -109,7 +109,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-4 col-lg-2">
+                    <div class="col-md-4 col-lg-4">
                         <ul class="megadropdown-links">
                           <h5 class="heading heading-5 strong-600 c-black">
                            Expand Your Reach
@@ -177,7 +177,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-4 col-lg-2">
+                    <div class="col-md-4 col-lg-4">
                         <ul class="megadropdown-links">
                        <h5 class="heading heading-5 strong-600 c-black">
                            Boost Productivity
