--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,11 +35,11 @@
              What we do
             </a>
 
-            <div class="dropdown-menu">
-                <div class="mega-dropdown-menu col-lg-12 justify-content-around row row-no-padding">
-                 <div class="px-1">
+            <div class="dropdown-menu ml-lg-auto">
+                <div class="mega-dropdown-menu col-sm-12 justify-content-around row-fluid row-no-padding" style="width:620px;">
+                 <div class="row">
                                             
-                    <div class="col-md-4 col-lg-4 ml-lg-auto">
+                    <div class="col-md-4 col-lg-4">
                         <ul class="megadropdown-links">
                           <h5 class="heading heading-5 strong-600 c-black">
                            Maximize Revenue
