--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                 </button>
             </div>
 
-           <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
+           <div class="collapse navbar-collapse align-items-center justify-content-end pl-2" id="navbar_main">
     <!-- Navbar search - For small resolutions -->
     <div class="navbar-search-widget b-xs-bottom py-3 d-lg-none d-none">
         <form class="" role="form">
