--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
             </a>
 
             <div class="dropdown-menu ml-lg-auto">
-                <div class="mega-dropdown-menu col-sm-12 justify-content-around row-fluid row-no-padding" style="width:620px;">
+                <div id="features-dropdown" class="mega-dropdown-menu col-sm-12 justify-content-around row-fluid row-no-padding" style="width:620px;">
                  <div class="row">
                                             
                     <div class="col-md-4 col-lg-4">
