--- a/_includes/header.html
+++ b/_includes/header.html
@@ -519,11 +519,11 @@
 
 <div class="pl-4 d-none d-lg-inline-block">
      <a href="https://id.everpayinc.com/login/" class="btn btn-styled btn-icon-right btn-sm btn-outline-success text-uppercase btn-circle">
-       Login <i data-feather="log-in"></i>
+       Login 
       </a>
  
     <a href="https://id.everpayinc.com/signup/" class="btn btn-styled btn-sm btn-base-5 text-uppercase btn-circle">
-        Get Started <i data-feather="arrow-right-circle"></i>     
+        Get Started    
  </a>
 </div>
         </div>
