--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons/line-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/line-icons-pro/line-icons-pro.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/budicons/budicon.css" | prepend: site.baseurl }}" type="text/css">
-                                                                                   
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/arrows/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/basic/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
 <link rel="stylesheet" href="{{ "/assets/fonts/linea/ecommerce/linea-icons.css" | prepend: site.baseurl }}" type="text/css">
