--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -229,5 +229,14 @@
   feather.replace()
 </script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-20603888-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-20603888-1');
+</script>
+
 <!-- App JS -->
 <script src="{{ "/assets/js/boomerang.min.js" | prepend: site.baseurl }}"></script>
