--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -101,15 +101,34 @@
 
     <div class="footer-bottom">
         <div class="container container-sm">
+        
              <div class="row">
-                <div class="col">
-                    <div class="copyright text-center">
+                <div class="col footer--copyright__wrapper">
+<ul class="footer--copyright">
+    <ul>                    
+     <li class="copyright text-center">
                         Copyright © 2019;
                         <a href="#" target="_blank">
-                            <strong>Everpay Corporation</strong>
+                            <strong>Everpay</strong>
                         </a> -
                         All rights reserved
-                    </div>
+                    </li>
+     <li>
+        <a href="/resources/sitemap">Sitemap</a>
+    </li>     
+<li>
+        <a href="https://status.everpayinc.com/preferences.html">Status</a>
+    </li> 
+ <li>
+        <a href="/legal/termsofservice">Terms of Use</a>
+    </li>
+<li>
+        <a href="/legal/privacypolicy">Privacy Policy</a>
+    </li>
+     <li>
+        <a href="/legal/cookie-notification">Cookie Notification</a>
+    </li>     
+ </ul>
                 </div>
             </div>
         </div>
