--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -100,35 +100,33 @@
     </div>
 
     <div class="footer-bottom">
-        <div class="container container-sm">
+        <div class="container container-lg">
         
              <div class="row">
-                <div class="col footer--copyright__wrapper">
-<ul class="footer--copyright">
-    <ul>                    
-     <li class="copyright text-center">
-                        Copyright © 2019;
+                <div class="col">
+<div class="footer--copyright">                  
+     <div class="copyright text-left">
+                        Copyright © 2019 
                         <a href="#" target="_blank">
                             <strong>Everpay</strong>
                         </a> -
                         All rights reserved
-                    </li>
-     <li>
+                    </div>
+     <div class="pl-1 text-left">
         <a href="/resources/sitemap">Sitemap</a>
-    </li>     
-<li>
+    </div>     
+<div class="pl-1 text-left">
         <a href="https://status.everpayinc.com/preferences.html">Status</a>
-    </li> 
- <li>
+    </div> 
+<div class="pl-1 text-left">
         <a href="/legal/termsofservice">Terms of Use</a>
-    </li>
-<li>
+</div>
+<div class="pl-1 text-left">
         <a href="/legal/privacypolicy">Privacy Policy</a>
-    </li>
-     <li>
+    </div>
+<div class="pl-1 text-left">
         <a href="/legal/cookie-notification">Cookie Notification</a>
-    </li>     
- </ul>
+    </div>
                 </div>
             </div>
         </div>
