--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -116,18 +116,18 @@
      <li class="pl-1 text-left">
         <a href="/resources/sitemap">Sitemap</a>
     </li>     
-<li class="pl-1 text-left">
+<li class="pl-1 text-center">
         <a href="https://status.everpayinc.com/preferences.html">Status</a>
     </li> 
-<li class="pl-1 text-left">
+<li class="pl-1 text-center">
         <a href="/legal/termsofservice">Terms of Use</a>
 </li>
-<li class="pl-1 text-left">
+<li class="pl-1 text-center">
         <a href="/legal/privacypolicy">Privacy Policy</a>
-    </div>
-<li class="pl-1 text-left">
+</li>
+<li class="pl-1 text-center">
         <a href="/legal/cookie-notification">Cookie Notification</a>
-    </li>  
+</li>  
 </ul>                
 </div>
             </div>
