--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
  <footer id="footer" class="footer">
     <div class="footer-top">
-        <div class="container">
+        <div class="container container-lg">
             <div class="row cols-xs-space cols-sm-space cols-md-space">
                 <div class="col-lg-5">
                     <div class="col">
@@ -103,8 +103,8 @@
         <div class="container container-lg">
         
 <div class="row">
-<ul class="col col-lg-4">               
-     <li class="copyright text-left">
+<ul class="col col-lg-4copyright ">               
+     <li class="text-left">
                         Copyright © 2019 
                         <a href="#" target="_blank">
                             <strong>Everpay</strong>
