--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,9 @@
                     <div class="col">
                         <img src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1496853370/Everpay-small-logo-grey_xhq1zs.png">
                         <span class="clearfix"></span>
-                        <span class="heading heading-sm c-gray-light strong-400">One template. Infinite solutions.</span>
+                        <span class="heading heading-sm c-gray-light strong-400">One platform. Infinite solutions.</span>
                         <p class="mt-3">
-                            All the components included in Everpay are built to the same level of quality as Bootstrap and highlighted with several example pages.
+                            All the components included in Everpay are built to the same level.
                         </p>
                     </div>
                 </div>
@@ -103,17 +103,17 @@
         <div class="container container-lg">
         
 <div class="row">
-<ul class="col col-lg-4copyright ">               
+<ul class="col col-lg-5 copyright">               
      <li class="text-left">
                         Copyright © 2019 
                         <a href="#" target="_blank">
                             <strong>Everpay</strong>
                         </a> -
-                        All rights reserved
+                        All rights reserved.
       </li>
  </ul>
- <ul class="col col-lg-8 copy-links">     
-     <li class="pl-1 text-left">
+ <ul class="col col-lg-7 copy-links">     
+     <li class="pl-1 text-center">
         <a href="/resources/sitemap">Sitemap</a>
     </li>     
 <li class="pl-1 text-center">
