--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -102,31 +102,33 @@
     <div class="footer-bottom">
         <div class="container container-lg">
         
-<div class="row">
-<ul class="col col-lg-5 copyright">               
-     <li class="text-left">
+<div class="row cols-xs-space cols-sm-space cols-md-space">
+<ul class="col-lg-5 copyright">               
+     <li class="col text-left">
                         Copyright © 2019 
                         <a href="#" target="_blank">
                             <strong>Everpay</strong>
-                        </a> -
-                        All rights reserved.
+                        </a> - All rights reserved.
       </li>
  </ul>
- <ul class="col col-lg-7 copy-links">     
-     <li class="pl-1 text-center">
+ <ul class="col-lg-7 copy-links">     
+     <li class="col pl-1 text-center">
         <a href="/resources/sitemap">Sitemap</a>
     </li>     
-<li class="pl-1 text-center">
+<li class="col pl-1 text-center">
         <a href="https://status.everpayinc.com/preferences.html">Status</a>
     </li> 
-<li class="pl-1 text-center">
+<li class="col pl-1 text-center">
         <a href="/legal/termsofservice">Terms of Use</a>
 </li>
-<li class="pl-1 text-center">
+<li class="col pl-1 text-center">
         <a href="/legal/privacypolicy">Privacy Policy</a>
 </li>
-<li class="pl-1 text-center">
+<li class="col pl-1 text-center">
         <a href="/legal/cookie-notification">Cookie Notification</a>
+</li>  
+  <li class="col pl-1 text-center">
+        <a href="https://www.elektropay.io">Powered by Elektropay</a>
 </li>  
 </ul>                
 </div>
